syntax = "proto3";

package croupier.agent.v1;
option java_package = "io.github.cuihairu.croupier.agent.v1";
option java_multiple_files = true;

option go_package = "github.com/cuihairu/croupier/pkg/pb/croupier/agent/v1;agentv1";

import "croupier/component/v1/dashboard_ui.proto";

// Function Descriptor - Server-side function definition with UI/RBAC metadata
message FunctionDescriptor {
  string id = 1;        // function id, e.g. "player.ban"
  string version = 2;   // semver, e.g. "1.2.0"
  string category = 3;  // grouping
  string risk = 4;      // "low"|"medium"|"high"
  string entity = 5;    // entity type, e.g. "item", "player"
  string operation = 6; // operation type, e.g. "create", "read", "update", "delete"
  bool enabled = 7;     // whether this function is currently enabled

  // UI/i18n/tags/menu/permissions for dynamic navigation & RBAC generation
  croupier.component.v1.I18nText display_name = 20;
  croupier.component.v1.I18nText summary      = 21;
  repeated string tags = 22;
  croupier.component.v1.Menu menu = 23;
  croupier.component.v1.PermissionSpec permissions = 24;

  // OpenAPI 3.0.3 Schema fields (JSON Schema format)
  string input_schema = 30;               // JSON Schema for request body
  string output_schema = 31;              // JSON Schema for response body
}

// Process/service instance registered to an agent (e.g. a game server process)
message AgentProcess {
  string service_id = 1;          // unique id from SDK
  string addr = 2;                // reachable address (agent-local)
  string version = 3;             // process/service version
  int64 last_seen_unix = 4;       // unix seconds
  repeated string function_ids = 5; // functions exposed by this process
}

// Agent Registration Request
message RegisterRequest {
  string agent_id = 1;              // agent unique id
  string version = 2;               // agent version
  repeated FunctionDescriptor functions = 3; // summarized function list
  string rpc_addr = 4;              // agent's reachable gRPC address (DEV ONLY)
  string game_id = 5;               // game scope (required for multi-game)
  string env = 6;                   // environment (optional: prod/stage/test)
  repeated AgentProcess processes = 7; // registered processes (sdk->agent)
  uint32 ttl_seconds = 8;           // session TTL (default 300s = 5min)

  // Location and labels
  string region = 10;               // region/zone info (e.g. "us-west-1")
  string zone = 11;                 // availability zone (e.g. "us-west-1a")
  map<string, string> labels = 12;  // system metadata labels (os, arch, hostname, etc.)
}

// Agent Registration Response
message RegisterResponse {
  string session_id = 1;
  int64 expire_at = 2; // epoch seconds
}

// Agent Heartbeat Request
message HeartbeatRequest {
  string agent_id = 1;
  string session_id = 2;
}

// Agent Heartbeat Response
message HeartbeatResponse {}

// Provider capabilities (manifest) â€” language-agnostic declaration
message ProviderMeta {
  string id = 1;
  string version = 2;
  string lang = 3;
  string sdk = 4;
}

// Register Capabilities Request
message RegisterCapabilitiesRequest {
  ProviderMeta provider = 1;
  bytes manifest_json_gz = 2; // gzipped manifest.json
}

// Register Capabilities Response
message RegisterCapabilitiesResponse {}
